# TP1

./: CMakeLists.txt  MIGRATION_SUMMARY.md  Makefile  README.md  SETUP.md  WSL_INSTRUCTIONS.md  build.bat  build.sh
.github/: QUICK_START.md
results/: results_raw.csv
scripts/: geracaoDeDados.py  runExperiments.sh
src/: csvReader.c  main.c  normalizeBaseline.c  normalizeQuake.c  normalizeSse.c  normalizeSseArm.c
tests/: data_1000x100.csv  data_1000x3.csv
tp1-normalize/: Makefile  normalize
tp1-normalize/results/: metrics.csv
tp1-normalize/scripts/: geracaoDeDados.py  runExperiments.sh
tp1-normalize/src/: csvReader.c  main.c  normalizeBaseline.c  normalizeQuake.c  normalizeSse.c
tp1-normalize/tests/: data_1000x10.csv
